# maze_game

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  game_context.py  main.py  scene_state.py
scenes/: __init__.py  conclusion_scene.py  fade_scene.py  game_scene.py  menu_scene.py
src/: __init__.py  core.h  main.cpp  main.h
src/core/: __init__.py  application.py  assets.py  base.h  game_context.py  input.py
src/core/debug/: assert.h  logger.h
src/core/types/: floats.h  integers.h
src/core/utils/: numerics.h  strings.h
src/ecs/: archetype.cpp  archetype.h  components.h  world.h
src/entities/: __init__.py  __utils.py  chase_enemy.py  maze_manager.py  nobody_rolly_polly.py  player.py  skinny_bird.py
src/game/: mg_main.cpp
src/main/: application.h  entry_point.cpp
src/scene/: game_object.h  scene.h
src/scenes/: __init__.py  conclusion_scene.py  fade_scene.py  game_scene.py  menu_scene.py  scene.py  shared_config.py
